force-app/main/default/objects/SFTS_Resource__c/SFTS_Resource__c.object-meta.xml
<CustomObject>
    <description>External resources SFTS helps survivors apply for: SNAP, TANF, WIC, Medicaid, Section 8, Unemployment, Legal Aid, etc. Referenced by Referral__c when an advocate helps a survivor apply for one of these.</description>
    <label>SFTS Resource</label>
    <nameField>
        <label>Resource Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SFTS Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>