force-app/main/default/objects/SFTS_Resource__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Uncheck if the resource is discontinued or temporarily unavailable.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>