force-app/main/default/objects/SFTS_Resource__c/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <description>The administering agency or organization (e.g., "Indiana FSSA", "US Department of Labor").</description>
    <label>Administering Agency</label>
    <length>100</length>
    <type>Text</type>
</CustomField>