force-app/main/default/objects/SFTS_Resource__c/fields/Apply_Phone__c.field-meta.xml
<CustomField>
    <fullName>Apply_Phone__c</fullName>
    <description>Phone number for application help or status check.</description>
    <label>Apply Phone</label>
    <type>Phone</type>
</CustomField>