force-app/main/default/objects/SFTS_Resource__c/fields/Apply_URL__c.field-meta.xml
<CustomField>
    <fullName>Apply_URL__c</fullName>
    <description>Direct application link.</description>
    <label>Apply URL</label>
    <type>Url</type>
</CustomField>