force-app/main/default/objects/SFTS_Resource__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>What domain this resource serves.</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Food / Basic Needs</fullName><default>false</default><label>Food / Basic Needs</label></value>
            <value><fullName>Housing</fullName><default>false</default><label>Housing</label></value>
            <value><fullName>Income / Employment</fullName><default>false</default><label>Income / Employment</label></value>
            <value><fullName>Healthcare</fullName><default>false</default><label>Healthcare</label></value>
            <value><fullName>Legal</fullName><default>false</default><label>Legal</label></value>
            <value><fullName>Safety</fullName><default>false</default><label>Safety</label></value>
            <value><fullName>Transportation</fullName><default>false</default><label>Transportation</label></value>
            <value><fullName>Identification</fullName><default>false</default><label>Identification</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>