force-app/main/default/objects/SFTS_Resource__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>What the resource is, in plain English.</description>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>