force-app/main/default/objects/SFTS_Resource__c/fields/Eligibility_Notes__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Notes__c</fullName>
    <description>Quick-reference on who qualifies. Surface this to advocates so they don't waste survivor time on applications that won't succeed.</description>
    <label>Eligibility Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>