force-app/main/default/objects/SFTS_Resource__c/fields/Internal_Notes__c.field-meta.xml
<CustomField>
    <fullName>Internal_Notes__c</fullName>
    <description>SFTS-specific tips: "We usually process these via our partner at X", "Typical timeline 3 weeks", "Common gotcha is they require Y document".</description>
    <label>Internal Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>