force-app/main/default/objects/SFTS_Resource__c/listViews/Active_Resources.listView-meta.xml
<ListView>
    <fullName>Active_Resources</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Agency__c</columns>
    <columns>Apply_URL__c</columns>
    <columns>Apply_Phone__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Resources</label>
</ListView>